--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
             
                 <div class="playerHead">
                     <div class="playerX">Player 
-                        <img src="http://www.mariowiki.com/images/8/8b/Marioicon.png" alt=""/>
+                        <img src="http://www.mariowiki.com/images/8/8b/Marioicon.png" alt="mario"/>
                     </div>
                     <div class="playerO">Player 
                         <img src="../assets/Luigi.png" alt=""/>
