--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+        
     <div class="wrapper">
+        
         <div class="leftSection">
             <div>
                 <h2>Let's Play<br/>the Tic-Tac-Toe<br/>Game!</h2>
@@ -46,6 +48,11 @@
         </div>
         </div>
     </div>
+
+    <div class="monique"><p>Made with ❤️ by Monique Chetty</p></div>
+    <audio controls autoplay>
+        <source src="./assets/Mario.mpeg" type="audio/mpeg">
+    </audio>
     <script src="../js/main.js" type="module"></script>
 </body>
 </html>
