--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="monique"><p>Made with ❤️ by Monique Chetty</p></div>
     </div> 
     <div class="audio">
-         <audio id="player" src="./assets/Mario.mpeg"></audio>
+         <audio id="player" src="./assets/Mario.mpeg" autoplay></audio>
         <div> 
         <button onclick="document.getElementById('player').play()">Play</button> 
         <button onclick="document.getElementById('player').pause()">Pause</button> 
@@ -69,6 +69,7 @@
         <span>Winner</span>
         <img src="./assets/mariojump.png" alt="" srcset="">
     </div>
+    
    
     <script src="../js/main.js" type="module"></script>
 </body>
