--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         </div>
     </div>
     <div class="winO" id="winO">
-        <span>Winner</span>
+        <h3>Winner</h3>
         <img src="./assets/Luigijump.png" alt="" srcset="">
     </div>
     <div class="winX" id="winX">
-        <span>Winner</span>
+        <h3>Winner</h3>
         <img src="./assets/mariojump.png" alt="" srcset="">
     </div>
     
