board size test

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <div class="leftSection">
                 <div>
-                    <h2>Let's Play<br/>the Tic-Tac-Toe<br/>Game!</h2>
+                    <h2>Let's Play<br/>the Tic-Tac-Toe Game!</h2>
                 </div>
                 <div class="restart">
                     Start a New Game
