img error fixed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
                     <div class="playerHead">
                         <div class="playerX">Player 
-                            <img src="http://www.mariowiki.com/images/8/8b/Marioicon.png" alt="mario"/>
+                            <img src="./assets/Marioicon.png" alt="mario"/>
                         </div>
                         <div class="playerO">Player 
                             <img src="../assets/Luigi.png" alt=""/>
